"~/.emacs.d/eudc-options".

*** New custom variable `ldap-ldapsearch-password-prompt-regexp' to
allow overriding the regular expression that recognizes the ldapsearch
command line's password prompt.

** Eshell

+++
*** The new built-in command `clear' can scroll window contents out of sight.
If provided with an optional non-nil argument, the scrollback contents will be cleared.

** Browse-url

*** Support for the Conkeror web browser.

---
*** Support for several ancient browsers is now officially obsolete.

+++
** tar-mode: new `tar-new-entry' command, allowing for new members to
be added to the archive.

** Autorevert: dired buffers are also auto-reverted via file
notifications, if Emacs is compiled with file notification support.

** Obsolete packages

---
*** gulp.el

+++
** The character classes [:graph:] and [:print:] in regular expressions
no longer match every multibyte character.  Instead, Emacs now
consults the Unicode character properties to determine which
characters are graphic or printable.  In particular, surrogates and
unassigned codepoints are now rejected.  If you want the old behavior,
use [:multibyte:] instead.


* New Modes and Packages in Emacs 25.1

** cl-generic.el provides CLOS-style multiple-dispatch generic functions.

** scss-mode (a minor variant of css-mode)

** let-alist is a new macro (and a package) that allows one to easily
let-bind the values stored in an alist.

** `tildify-mode' allows to automatically insert hard spaces as one
types the text.  Breaking line after a single-character words is
forbidden by Czech and Polish typography (and may be discouraged in
other languages), so `auto-tildify-mode' makes it easier to create
a typographically-correct documents.

* Incompatible Lisp Changes in Emacs 25.1

** `indirect-function' does not signal `void-function' any more.
This is mostly a bug-fix, since this change was missed back in 24.4 when
symbol-function was changed not to signal `void-function' any more.